<resources>
    <string name="app_name">Raihere</string>
    <string name="user">Usuario</string>
    <string name="pass">Contraeña</string>
    <string name="forget">¿Olvidaste tu contraseña?</string>
    <string name="Register">Registrate</string>
    <string name="login">Login</string>
    <string name="Enviar">Enviar</string>
    <string name="Cancelar">Cancelar</string>
    <string name="olvidar">Agrega tu email para recuperar tu contraseña.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_registro">registro</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
