<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="#2196F3"
    android:layout_height="match_parent"

    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:text="@string/olvidar"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="20dp"
        />
    <EditText
        android:id="@+id/edtpassForget"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textSize="20dp"
        android:background="#00BCD4"
        android:layout_marginTop="5dp"
        android:textColor="#FFFFFF"
        android:hint="Correo"
        android:layout_marginLeft="17dp"

        android:layout_marginRight="17dp"
        android:textColorHint="#FFFFFF"
        android:singleLine="true"
        />
<LinearLayout
    android:layout_width="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:layout_height="wrap_content">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Enviar"
        android:background="@drawable/custom_button"
        android:textColor="#FFFFFF"
        android:id="@+id/btnEnviar"
        android:layout_marginLeft="60dp"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Cancelar"
        android:background="@drawable/custom_button"
        android:textColor="#FFFFFF"
        android:layout_marginLeft="10dp"
        android:id="@+id/btnCancelar"

        android:layout_gravity="center_horizontal" />


</LinearLayout>


</LinearLayout>